hphp/test/zend/good/ext/calendar/tests/frenchtojd.php
<?php
echo frenchtojd(-1,-1,-1), "\n";
echo frenchtojd(0,0,0), "\n";
echo frenchtojd(1,1,1), "\n";
echo frenchtojd(14,31,15), "\n";
?>